erDiagram
    %% Travel & Fares — generated by php artisan erd:generate

    airlines {
        bigint id PK
        string name
        string code
        timestamp created_at
        timestamp updated_at
    }

    city_codes {
        bigint id PK
        string city_name
        string code
        string country
        timestamp created_at
        timestamp updated_at
    }

    classes {
        bigint id PK
        string name
        timestamp created_at
        timestamp updated_at
    }

    airline_cities {
        bigint id PK
        bigint airline_id FK
        bigint city_code_id FK
        timestamp created_at
        timestamp updated_at
    }

    airline_classes {
        bigint id PK
        bigint airline_id FK
        bigint class_id FK
        timestamp created_at
        timestamp updated_at
    }

    routes {
        bigint id PK
        bigint airline_id FK
        string route_type
        string flight_type
        bigint from_city_id FK
        bigint to_city_id FK
        bigint return_city_id FK
        timestamp created_at
        timestamp updated_at
        int additional_gap
    }

    route_multi_segments {
        bigint id PK
        bigint route_id FK
        bigint from_city_id FK
        bigint to_city_id FK
        string segment_direction
        timestamp created_at
        timestamp updated_at
    }

    route_transits {
        bigint id PK
        bigint route_id FK
        bigint transit_city_id FK
        int transit_time
        timestamp created_at
        timestamp updated_at
        string route_direction
    }

    ticket_fares {
        bigint id PK
        bigint airline_id FK
        bigint airline_classes_id FK
        bigint route_id FK
        string ticket_type
        date effective_from
        date effective_to
        decimal net_fare
        decimal selling_fare
        decimal offer_price
        decimal child_fare_percentage
        decimal infant_fare_percentage
        int with_meal
        bigint user_id FK
        int is_active
        timestamp created_at
        timestamp updated_at
    }

    group_tickets {
        bigint id PK
        bigint ticket_fare_id FK
        date inbound_date
        date outbound_date
        string pnr
        int ticket_qty
        int is_refundable
        int is_exchangable
        timestamp created_at
        timestamp updated_at
    }

    baggage_allowances {
        bigint id PK
        bigint ticket_fare_id FK
        string passenger_type UK
        string travel_direction UK
        string allowance
        timestamp created_at
        timestamp updated_at
    }

    ticket_fare_update_logs {
        bigint id PK
        bigint ticket_fare_id FK
        bigint user_id FK
        string action
        string old_values
        string new_values
        timestamp created_at
    }

    %% Relationships
    airline_classes ||--|{ ticket_fares : airline_classes_id
    airlines ||--|{ airline_cities : airline_id
    airlines ||--|{ airline_classes : airline_id
    airlines ||--|{ routes : airline_id
    airlines ||--|{ ticket_fares : airline_id
    city_codes ||--o{ routes : from_city_id
    city_codes ||--o{ routes : return_city_id
    city_codes ||--o{ routes : to_city_id
    city_codes ||--|{ airline_cities : city_code_id
    city_codes ||--|{ route_multi_segments : from_city_id
    city_codes ||--|{ route_multi_segments : to_city_id
    city_codes ||--|{ route_transits : transit_city_id
    classes ||--|{ airline_classes : class_id
    routes ||--|{ route_multi_segments : route_id
    routes ||--|{ route_transits : route_id
    routes ||--|{ ticket_fares : route_id
    ticket_fares ||--o{ ticket_fare_update_logs : ticket_fare_id
    ticket_fares ||--|{ baggage_allowances : ticket_fare_id
    ticket_fares ||--|{ group_tickets : ticket_fare_id

